packages/voltaire-c/include/voltaire.h

int primitives_blob_from_data(const unsigned char* data, size_t data_len, unsigned char out_blob[131072]);
int primitives_blob_to_data(const unsigned char blob[131072], unsigned char* out_data, size_t* out_len);
int primitives_blob_is_valid(size_t blob_len);
uint64_t primitives_blob_calculate_gas(uint32_t blob_count);
uint32_t primitives_blob_estimate_count(size_t data_size);
uint64_t primitives_blob_calculate_gas_price(uint64_t excess_blob_gas);
uint64_t primitives_blob_calculate_excess_gas(uint64_t parent_excess, uint64_t parent_used);
int64_t primitives_bytecode_get_next_pc(const unsigned char* code, size_t code_len, uint32_t current_pc);