packages/voltaire-py/src/voltaire/_ffi.py


    lib.primitives_bytecode_get_next_pc.argtypes = [
        c_uint8_p,              # code
        c_size_t,               # code_len
        c_uint32,               # current_pc
    ]
    lib.primitives_bytecode_get_next_pc.restype = c_int64

    # Blob functions (EIP-4844)
    lib.primitives_blob_from_data.argtypes = [c_uint8_p, c_size_t, c_uint8_p]
    lib.primitives_blob_from_data.restype = c_int

    lib.primitives_blob_to_data.argtypes = [c_uint8_p, c_uint8_p, POINTER(c_size_t)]
    lib.primitives_blob_to_data.restype = c_int

    lib.primitives_blob_is_valid.argtypes = [c_size_t]
    lib.primitives_blob_is_valid.restype = c_int

    lib.primitives_blob_calculate_gas.argtypes = [c_uint32]
    lib.primitives_blob_calculate_gas.restype = c_uint64

    lib.primitives_blob_estimate_count.argtypes = [c_size_t]
    lib.primitives_blob_estimate_count.restype = c_uint32

    lib.primitives_blob_calculate_gas_price.argtypes = [c_uint64]
    lib.primitives_blob_calculate_gas_price.restype = c_uint64

    lib.primitives_blob_calculate_excess_gas.argtypes = [c_uint64, c_uint64]
    lib.primitives_blob_calculate_excess_gas.restype = c_uint64


# Lazy-loaded library instance
_lib: Optional[ctypes.CDLL] = None


def get_lib() -> ctypes.CDLL:
    """Get the loaded library instance (lazy loading)."""
    global _lib
    if _lib is None:
        _lib = _load_library()
    return _lib
